@@ -10,7 +10,6 @@ Post-v2.7.0
        Log level can be changed in a usual OVS way using
        'ovs-appctl vlog' commands for 'dpdk' module. Lower bound
        still can be configured via extra arguments for DPDK EAL.
-   - The "learn" action now supports a "limit" option (see ovs-ofctl(8)).
    - New support for multiple VLANs (802.1ad or "QinQ"), including a new
      "dot1q-tunnel" port VLAN mode.
    - OVN:
@@ -19,6 +18,9 @@ Post-v2.7.0
      * Allow ovn-controller SSL configuration to be obtained from vswitchd
        database.
    - Add the command 'ovs-appctl stp/show' (see ovs-vswitchd(8)).
+   - OpenFlow:
+     * Bundles now support hashing by just nw_src or nw_dst.
+     * The "learn" action now supports a "limit" option (see ovs-ofctl(8)).
 
 v2.7.0 - 21 Feb 2017
 ---------------------
